fix spacing at bottom of main on mobile

--- a/src/styles/components/mm/components/_college.scss
+++ b/src/styles/components/mm/components/_college.scss
@@ -38,6 +38,7 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(32, minmax(0rem, auto));
       margin-right: -1.25rem;
+      margin-bottom: -1.25rem;
       height: auto;
     }
   }
